unique-service-selector.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sUniqueServiceSelector
metadata:
  name: gatekeeper-unique-service-selector
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]
